feat: setup account module, controller, service and V1GetAccountBalance dto

--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
-    "reflect-metadata": "^0.1.13",
+    "alchemy-sdk": "^2.2.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "alchemy-sdk": "^2.2.5"
+    "lodash": "^4.17.21",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -35,6 +36,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.4",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^18.0.3",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
